--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,6 +1,7 @@
+@import "bootstrap";
+
 h1 {
   color: #E6207C;
-  text-align: center;
   font-family: 'gooddogregular', Arial;
   font-size: 50px;
 }
@@ -10,4 +11,32 @@ img {
   margin: auto;
   padding-bottom: 40px;
   width: 80%;
+}
+
+.booyah-box {
+  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  box-shadow: 1px 1px 2px 0 #d0d0d0;
+  background: #fff;
+  border: 1px solid #ccc;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  padding: 20px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin:0;
+  padding:0;
+}
+
+.help-block {
+  color: #ff3333;
+  background-color: #CDB3F5;
+  border-radius: 3px;
+  padding: 2px 8px 2px 8px;
+}
+
+.clear {
+  clear: both;
 }
